--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
     "html-react-parser": "^5.1.1",
     "html-to-text": "^9.0.5",
+    "isomorphic-unfetch": "^4.0.2",
     "microcms-js-sdk": "^2.7.0",
     "next": "14.1.0",
     "plaiceholder": "^3.0.0",
